<resources>
    <string name="app_name">ToDoApp</string>

    <string name="action_show_task_list">Show Full Task List</string>
    <string name="action_settings">Settings</string>
    <string name="action_update">Update</string>
    <string name="action_filter">Filter</string>
    <string name="check">Check</string>
    <string name="search">Search</string>
    <string name="action_search_by_date">Search By Date</string>
    <string name="action_search_by_title">Search By Title</string>

    <string name="add_new_task">Add New Holiday</string>
    <string name="add_new_event">Add New Task</string>
    <string name="save_button">Save</string>

    <string name="title_hint">Title</string>
    <string name="place_hint">Place</string>
    <string name="describe_hint">Describe</string>
    <string name="subtasks_text">Subtasks</string>
    <string name="all_day_check_box">All Day</string>
    <string name="priority">Priority</string>
    <string name="category">Category</string>
    <string name="repeat">Repeating</string>
    <string name="add_new_category">Add New Category</string>

    <string name="gmail_hint">Gmail</string>
    <string name="password_hint">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="reset_password">Reset</string>

    <string name="task_filter_title">Tasks</string>
    <string name="priority_filter_title">Priorities</string>
    <string name="ok_button_filter">OK</string>
    <string name="cancel_button_filter">Cancel</string>
    <string name="task_filter">Task</string>
    <string name="date_task_filter">Date Task</string>
    <string name="low_filter_priority">Low</string>
    <string name="middle_filter_priority">Middle</string>
    <string name="high_filter_priority">High</string>

    <string name="date_text">Date</string>
    <string name="time_text">Time</string>

    <string name="title_event_task">Tasks</string>
    <string name="title_notes">Notes</string>
    <string name="empty_text">Empty</string>

    <string name="settings_autodelete_task_text">Autodelete Task</string>
    <string name="settings_tasks">Tasks Settings</string>
    <string name="settings_common">Common Settings</string>

    <string name="without_category_text">Without Category</string>
    <string name="add_new_category_text">Add New Category</string>

    <string name="filter_category_title">Categories</string>

    <string name="bottom_events">Events</string>
    <string name="bottom_notes">Notes</string>
    <string name="bottom_settings">Settings</string>
</resources>
