<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.diplom.todoapp.MainActivity">
    <item
        android:id="@+id/action_filter"
        android:orderInCategory="100"
        android:icon="@drawable/baseline_filter_alt_24"
        app:showAsAction="always"
        android:title="@string/action_filter" />
    <item
        android:id="@+id/action_show_task_list"
        android:orderInCategory="100"
        android:title="@string/action_show_task_list"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>