<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:menu="@menu/popup_menu" />

    </com.google.android.material.appbar.AppBarLayout>

    <EditText
        android:id="@+id/task_title"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/title_hint"
        android:inputType="textMultiLine"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

    <EditText
        android:id="@+id/task_describe"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/describe_hint"
        android:inputType="textMultiLine"
        app:layout_constraintTop_toBottomOf="@+id/task_title" />

    <Button
        android:id="@+id/task_saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/save_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/all_day_check_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/all_day_check_box"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/task_describe" />

    <Spinner
        android:id="@+id/task_reminder"
        android:layout_width="253dp"
        android:layout_height="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/task_edit_text_date" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/task_edit_text_date"
        app:srcCompat="@android:drawable/ic_menu_month"
        tools:layout_editor_absoluteX="17dp" />

    <Spinner
        android:id="@+id/task_priority"
        android:layout_width="254dp"
        android:layout_height="22dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/priority"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/task_edit_text_date"
        android:layout_width="187dp"
        android:layout_height="46dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/date_text"
        android:inputType="date"
        app:layout_constraintEnd_toStartOf="@+id/task_edit_text_time"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/all_day_check_box" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/task_edit_text_time"
        android:layout_width="114dp"
        android:layout_height="47dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/time_text"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.676"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/all_day_check_box" />
</androidx.constraintlayout.widget.ConstraintLayout>